updated with css and username for commit

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <title>Abhishek Omprakash's resume page</title>
+    <link rel="stylesheet" href="site.css">
 </head>
 
 <body>
     <header>
         <h1>Abhishek Omprakash</h1>
-        <img src="/img/giphy.gif" 
+        <img id="headshot" src="/img/MyBackgroundPhoto.jpg" 
              alt="Abhishek Omprakash"/>
         <ol>
             <li><a href="index.html">Home</a></li>
@@ -19,13 +20,17 @@
     <main>
         <p><strong>Purpose:</strong>This is a resume (or CV) to help me get a job in web development.</p>
         <h2>Experience</h2>
-        <div>
-            <p>CVS - Healthcare Company - 2012-2019</p>
+        <div class="experience">
+            <p class="title">CVS - Healthcare Company - 2012-2019</p>
             <p>Worked register and did inventory.</p>
         </div>
-        <div>
-            <p>McDonalds - Not a Healthcare Company - 2010-2011</p>
+        <div class="experience">
+            <p class="title">McDonalds - Not a Healthcare Company - 2005-2012</p>
             <p>Burger and Fry Cook.</p>
+        </div>
+        <div class="experience">
+            <p class="title">Self Employed - Mowing Lawns - 2004-2005</p>
+            <p>Mostly for my Dad.</p>
         </div>
     </main>
 
