--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <h1>Abhishek Omprakash</h1>
-        <img id="headshot" src="/img/MyBackgroundPhoto.jpg" 
-             alt="Abhishek Omprakash"/>
+        <img id="headshot" src="img/MyBackgroundPhoto.jpg" 
+             alt="Abhishek Omprakash profile"/>
         <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
