--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 </head>
 
 <body>
+    <div class="container">
     <header>
-        <h1>Abhishek Omprakash</h1>
         <img id="headshot" src="img/MyBackgroundPhoto.jpg" 
              alt="Abhishek Omprakash profile"/>
-        <ol>
-            <li><a href="index.html">Home</a></li>
+        <h1 id="siteName">Abhishek Omprakash</h1>
+        <ul id ="menu">
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="privacy.html">Privacy</a></li>
-        </ol>
+        </ul>
     </header>
     <main>
-        <p><strong>Purpose:</strong>This is a resume (or CV) to help me get a job in web development.</p>
+        <p><strong>Purpose: </strong>This is a resume (or CV) to help me get a job in web development.</p>
         <h2>Experience</h2>
         <div class="experience">
             <p class="title">CVS - Healthcare Company - 2012-2019</p>
@@ -74,6 +75,7 @@
     <footer>
         <p>&copy; 2023 Copyright - Abhishek Omprakash</p>
     </footer>
+</div>
 </body>
 
 </html>
