--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
         <aside>
             <h2>Contact me</h2>
-            <form>
+            <form id="contactForm">
+                <div id="formInfo"></div>
                 <div>
                     <label for="fullName">Full Name</label>
                 </div>
