--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
             <p>&copy; 2023 Copyright - Abhishek Omprakash</p>
         </footer>
     </div>
-    <script src="index.js">
-
-    </script>
+    <!-- <script src="Contact.js"></script> -->
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
